[gd_scene load_steps=26 format=3 uid="uid://d4bsaxj0j3hoc"]

[ext_resource type="Script" uid="uid://bi7u7tu0t1h1k" path="res://Scripts/UI/Main_menu.gd" id="1_n1dpb"]
[ext_resource type="Theme" uid="uid://dylriqvd0gggf" path="res://game_main_theme.tres" id="2_mqeuu"]
[ext_resource type="AudioStream" uid="uid://dmstst6t88drm" path="res://Audio/Music/The Four Seasons Summer in G Minor RV. 315 III.mp3" id="2_q6ayx"]
[ext_resource type="Script" uid="uid://so4m0io4gjtt" path="res://Scripts/Resources/MusicDetails.gd" id="3_juhrs"]
[ext_resource type="PackedScene" uid="uid://gfx6r6lnobro" path="res://Scenes/UIComponents/AnimatedLabel.tscn" id="3_mlo2r"]
[ext_resource type="PackedScene" uid="uid://bkmy27dnw7m2b" path="res://Scenes/UIComponents/ResponsiveBackground.tscn" id="3_rj78t"]
[ext_resource type="PackedScene" uid="uid://cs4pb1qbaaode" path="res://Scenes/Components/AnimationComponentUI.tscn" id="4_5ycdg"]
[ext_resource type="PackedScene" uid="uid://44b3lqo4rfge" path="res://Scenes/UIComponents/TweenableButton.tscn" id="5_3o1w0"]
[ext_resource type="PackedScene" uid="uid://bth3shtncydri" path="res://Scenes/UIComponents/RippleComponentUI.tscn" id="6_udh87"]
[ext_resource type="Shader" uid="uid://b05n3i7wetruc" path="res://Shaders/RippleButtonShader.gdshader" id="7_a0eer"]

[sub_resource type="Resource" id="Resource_tpqx3"]
script = ExtResource("3_juhrs")
music_clip = ExtResource("2_q6ayx")
volume_linear = 1.0
has_playlist = false

[sub_resource type="Environment" id="Environment_kv8h2"]
background_mode = 3
glow_enabled = true
glow_normalized = true
glow_strength = 0.9
glow_bloom = 0.1
glow_blend_mode = 1
glow_hdr_threshold = 0.9

[sub_resource type="Gradient" id="Gradient_ap212"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.204503, 0.54409, 0.848544, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0.0941176, 0.270588, 1, 0.00784314, 0.243137, 0.490196, 1, 0.0156863, 0.4, 0.784314, 1, 0.0991788, 0.524721, 0.988831, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tpf7n"]
gradient = SubResource("Gradient_ap212")
use_hdr = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wrspo"]
bg_color = Color(1, 1, 1, 0.0117647)
border_color = Color(0, 0, 0, 0.392)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4eej4"]
bg_color = Color(0.6, 0.6, 0.6, 0.274)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6r2e"]
bg_color = Color(1, 1, 1, 0.194)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cyqrj"]
bg_color = Color(0, 0, 0, 0.525)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mi68g"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5y1js"]
shader = ExtResource("7_a0eer")
shader_parameter/circle_center = Vector2(-0.35, 0)
shader_parameter/time = 0.0
shader_parameter/size = Vector2(1920, 92)
shader_parameter/color = Color(0.2, 0.254902, 0.360784, 1)
shader_parameter/margin = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hro2d"]
bg_color = Color(0.6, 0.6, 0.6, 0.274)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tcao"]
bg_color = Color(1, 1, 1, 0.194)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqvfn"]
bg_color = Color(0, 0, 0, 0.525)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emfc2"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_75ayw"]
shader = ExtResource("7_a0eer")
shader_parameter/circle_center = Vector2(-0.35, 0)
shader_parameter/time = 0.0
shader_parameter/size = Vector2(1920, 92)
shader_parameter/color = Color(0.2, 0.254902, 0.360784, 1)
shader_parameter/margin = Vector2(0, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_n1dpb")
main_menu_music = SubResource("Resource_tpqx3")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kv8h2")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_mqeuu")
texture = SubResource("GradientTexture1D_tpf7n")

[node name="ResponsiveBackground" parent="." instance=ExtResource("3_rj78t")]
layout_mode = 1
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0

[node name="ColorRect" type="ColorRect" parent="ResponsiveBackground/ChildContainer" index="0"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
offset_left = -1217.0
offset_top = -263.0
offset_right = -332.0
offset_bottom = -63.0
color = Color(0.0352941, 0.160784, 0.286275, 1)

[node name="AnimationComponent" parent="ResponsiveBackground/ChildContainer/ColorRect" instance=ExtResource("4_5ycdg")]
tween_time = 0.5
tween_transition = 5
tween_ease = 2
tween_scale = Vector2(1.5, 1.5)
tween_position = Vector2(50, 0)
tween_size = Vector2(0, 0)
tween_rotation = 20.0

[node name="ColorRect2" type="ColorRect" parent="ResponsiveBackground/ChildContainer" index="1"]
layout_mode = 2
offset_left = 415.0
offset_top = 84.0
offset_right = 1010.0
offset_bottom = 250.0
color = Color(0.0235294, 0.419608, 0.819608, 1)

[node name="AnimationComponent" parent="ResponsiveBackground/ChildContainer/ColorRect2" instance=ExtResource("4_5ycdg")]
tween_time = 0.5
tween_transition = 4
tween_ease = 2
tween_scale = Vector2(0.6, 0.6)
tween_position = Vector2(0, 0)
tween_size = Vector2(0, 0)
tween_rotation = 0.0
tween_modulate = Color(0.0862745, 0.509804, 0.964706, 1)

[node name="ColorRect3" type="ColorRect" parent="ResponsiveBackground/ChildContainer" index="2"]
layout_mode = 2
offset_left = -998.0
offset_top = 158.0
offset_right = -245.0
offset_bottom = 542.0
color = Color(0.0392157, 0.360784, 0.576471, 1)

[node name="AnimationComponent" parent="ResponsiveBackground/ChildContainer/ColorRect3" instance=ExtResource("4_5ycdg")]
tween_time = 0.5
tween_transition = 11
tween_ease = 2
tween_scale = Vector2(1.2, 0.8)
tween_position = Vector2(0, 0)
tween_size = Vector2(0, 0)
tween_rotation = 0.0

[node name="ColorRect4" type="ColorRect" parent="ResponsiveBackground/ChildContainer" index="3"]
layout_mode = 2
offset_left = 266.0
offset_top = -518.0
offset_right = 892.0
offset_bottom = -92.0
color = Color(0.337255, 0.74902, 0.988235, 1)

[node name="AnimationComponent" parent="ResponsiveBackground/ChildContainer/ColorRect4" instance=ExtResource("4_5ycdg")]
tween_time = 0.69
tween_transition = 3
tween_ease = 2
tween_scale = Vector2(1.5, 1.1)
tween_position = Vector2(-50, 0)
tween_size = Vector2(0, 0)
tween_rotation = 360.0
tween_modulate = Color(0, 0.054902, 0.172549, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_mqeuu")
theme_override_constants/margin_left = 25
theme_override_constants/margin_bottom = 30
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 90
alignment = 1
metadata/_edit_lock_ = true

[node name="Title" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_mlo2r")]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "HASHENEER"
horizontal_alignment = 0
anim_speed = 0.05
blinking_cursor = true
original_text = "HASHENEER"

[node name="AnimationComponent" parent="MarginContainer/VBoxContainer/Title" instance=ExtResource("4_5ycdg")]
enter_animation = true
tween_time = 0.25
tween_transition = 10
tween_ease = 2
tween_scale = Vector2(0.8, 0.8)
tween_position = Vector2(0, 0)
tween_rotation = 0.0
enter_rotation = 0.0

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="StartGame" parent="MarginContainer/VBoxContainer/ButtonContainer" instance=ExtResource("5_3o1w0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
size_flags_horizontal = 1
focus_neighbor_top = NodePath("../QuitGame")
focus_neighbor_bottom = NodePath("../QuitGame")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxFlat_wrspo")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4eej4")
theme_override_styles/hover = SubResource("StyleBoxFlat_h6r2e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cyqrj")
theme_override_styles/normal = SubResource("StyleBoxFlat_mi68g")
text = "Start Game"
alignment = 0
enter_delay = 5.0
pivot_below = true
x_max = 7.0
r_max = 1.0
stop_threshold = 6.5
shake_time = 0.15
shake_transition = 1
shake_ease = 1
metadata/_edit_lock_ = true

[node name="RippleComponentUI" parent="MarginContainer/VBoxContainer/ButtonContainer/StartGame" instance=ExtResource("6_udh87")]
material = SubResource("ShaderMaterial_5y1js")
layout_mode = 1
metadata/_edit_lock_ = true

[node name="QuitGame" parent="MarginContainer/VBoxContainer/ButtonContainer" instance=ExtResource("5_3o1w0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 1
focus_neighbor_top = NodePath("../StartGame")
focus_neighbor_bottom = NodePath("../StartGame")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = SubResource("StyleBoxFlat_wrspo")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hro2d")
theme_override_styles/hover = SubResource("StyleBoxFlat_7tcao")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gqvfn")
theme_override_styles/normal = SubResource("StyleBoxFlat_emfc2")
text = "Quit Game"
alignment = 0
enter_delay = 5.5
shake_transition = 1
metadata/_edit_lock_ = true

[node name="RippleComponentUI" parent="MarginContainer/VBoxContainer/ButtonContainer/QuitGame" instance=ExtResource("6_udh87")]
material = SubResource("ShaderMaterial_75ayw")
layout_mode = 1
metadata/_edit_lock_ = true

[node name="Footer" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_mlo2r")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "I Know This Main Menu Sucks, But I Tried My Best"
horizontal_alignment = 0
anim_speed = 0.05
blinking_cursor = true
original_text = "I Know This Main Menu Sucks, But I Tried My Best"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/StartGame" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/QuitGame" to="." method="_on_quit_game_button_pressed"]

[editable path="ResponsiveBackground"]
